Fix checkbox style on Safari

--- a/src/App.css
+++ b/src/App.css
@@ -56,11 +56,7 @@ main {
 .todo-item-container-content {
   display: flex;
   flex-direction: row;
-}
-
-.todo-item-container-content {
-  display: flex;
-  flex-direction: row;
+  align-items: center;
 }
 
 .add-todo-container {
